
  * fix i18n issue (Fixes LP:#114207)
  * DistUpgrade/DistUpgradeCache.py:
    - if "386" (UP) kernel is installed on SMP machine, automatically 
      switch to SMP kernel (Fixes LP: #106387)
  * DistUpgrade/DistUpgrade.cfg:
    - set python2.3 to remove list to ensure smooth upgrade 
      (Fixes LP: #108147)
    - fix in snapshot feature (Fixes LP: #108413)
  * Separate downloading and upgrading (Fixes LP: #108515)

 --

update-manager (1:0.62) gutsy; urgency=low

  * revert locking fix, it broke release upgrades
  * fix upgrade string

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 May 2007 22:14:24 +0200

update-manager (1:0.61) gutsy; urgency=low

  * add missing dh_gconf (LP#114569)
  * fix mispelled entry in removal_blacklist (LP#107558)
  * fix locking problem (LP#108446)
  * make the wording of the free space message more clear

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 May 2007 10:09:54 +0200

update-manager (1:0.60) gutsy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - fix free space check when the dir checked is a symlink
      (LP#106804)
    - increase minAge for the apt cleanup cron job during the upgrade
      to fix race for people with very slow network (LP#109548)
    - deal with invalid lines in /proc/mounts when calculating 
      the free space (LP#108284)
  * cdromupgrade:
    - do not call any authentication mechanism, that is the
      responsibility of the user (LP#107431)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix a bug in the cdrom progress (LP#107451)
  * DistUpgrade/DistUpgradeViewText.py:
    - send correct package failure information to log (LP#109209)
  * DistUpgrade/crashdialog.ui
    - Fix bug report URL in crash dialogue (LP#108969)
  * UpdateManager/Core/MetaRelease.py:
    - fix in I-M-S 304 handling (LP#109216)
  * DistUpgrade/DistUpgradeCache.py:
    - check RemovalBlacklist early when removing a package to
      work-around crash in problem resolver (LP#109014)