@@ -8,7 +8,8 @@ update-manager (1:0.63) gutsy; urgency=low
     - set python2.3 to remove list to ensure smooth upgrade 
       (Fixes LP: #108147)
     - fix in snapshot feature (Fixes LP: #108413)
-  * Separate downloading and upgrading (Fixes LP: #108515)
+  * Separate downloading and upgrading (Fixes LP: #91978)
+  * Show demotions before runing the upgrade (Fixes LP: #91998)
 
  --
 
